# go-blitz

./: AUTHORS  README  README.md  blitz.go
orig/blitz-sdl-1.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  blitz-sdl.6  config.h.in  configure  configure.ac
orig/blitz-sdl-1.1/data/: Makefile.am  Makefile.in
orig/blitz-sdl-1.1/src/: Makefile.am  Makefile.in  blitz-sdl.c
